--- a/css/styles.css
+++ b/css/styles.css
@@ -509,15 +509,18 @@ img {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: transparent;
   padding: 8px 16px;
-  margin-right: 24px;
   color: #fff;
   outline: none;
 }
 
 .footer-input-wrap {
+}
+
+.footer-email-form {
   display: flex;
   flex-direction: row;
-  align-items: baseline;
+  gap: 24px;
+  align-items: center;
 }
 
 .footer-input-btn {
