--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,8 @@ img {
   opacity: 1;
   pointer-events: auto;
   visibility: visible;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* -------------------------------------  */
@@ -566,8 +568,7 @@ img {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -589,7 +590,6 @@ img {
   transform: translate(-50%, -50%);
   padding: 24px;
   padding-top: 72px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -644,9 +644,12 @@ img {
   margin-bottom: 4px;
 }
 
+.modal-form-item {
+  margin-bottom: 8px;
+}
+
 .modal-input-wrap {
   position: relative;
-  margin-bottom: 8px;
 }
 
 .modal-input {
