--- a/css/styles.css
+++ b/css/styles.css
@@ -642,6 +642,7 @@ img {
   letter-spacing: 0.04em;
   color: #8e8f99;
   margin-bottom: 4px;
+  display: block;
 }
 
 .modal-form-item {
@@ -662,6 +663,7 @@ img {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
+  background-color: transparent;
   padding: 8px 16px 8px 38px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -704,7 +706,8 @@ img {
   line-height: 1.17;
   letter-spacing: 0.04em;
   padding: 8px 16px;
-  color: #2e2f42;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 16px;
   /* display: block; */
@@ -743,17 +746,19 @@ img {
   background-color: #404bbf;
 }
 
+.privacy-wrap {
+  margin-bottom: 24px;
+}
 .privacy-check {
 }
 
 .privacy-text {
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   display: flex;
   align-items: center;
-  margin-bottom: 24px;
 }
 
 .fake-checkbox {
@@ -762,12 +767,13 @@ img {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   margin-right: 8px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-privacy-check {
@@ -776,6 +782,7 @@ img {
 .privacy-check:checked + .privacy-text .fake-checkbox {
   fill: #f4f4fd;
   background-color: #404bbf;
+  border: none;
 }
 
 .privacy-link {
