--- a/css/styles.css
+++ b/css/styles.css
@@ -568,7 +568,8 @@ img {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -590,6 +591,7 @@ img {
   transform: translate(-50%, -50%);
   padding: 24px;
   padding-top: 72px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -670,7 +672,8 @@ img {
 
 .input-icon {
   position: absolute;
-  top: 8px;
+  top: 50%;
+  transform: translateY(-50%);
   left: 16px;
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -692,6 +695,7 @@ img {
 .modal-comment-wrap {
   display: flex;
   flex-direction: column;
+  margin-bottom: 16px;
 }
 
 .modal-textarea {
@@ -709,8 +713,6 @@ img {
   color: rgba(46, 47, 66, 0.4);
   background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-bottom: 16px;
-  /* display: block; */
 }
 
 .modal-textarea::placeholder {
@@ -762,12 +764,12 @@ img {
 }
 
 .fake-checkbox {
+  display: inline-flex;
   width: 16px;
   height: 16px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   margin-right: 8px;
-  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
@@ -786,7 +788,6 @@ img {
 }
 
 .privacy-link {
-  margin-left: 4px;
   text-decoration: underline;
   color: #4d5ae5;
 }
