--- a/css/styles.css
+++ b/css/styles.css
@@ -759,8 +759,10 @@ img {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: flex;
-  align-items: center;
+}
+
+.privacy-text span {
+  display: inline-flex;
 }
 
 .fake-checkbox {
